# skgen

./: Makefile.am  README.md  configure.ac
examples/BN/: B  N  bulk  plot2.py  run.sh  test
examples/W/: W  bulk  bulk2  plot2.py  run.sh  test
include/: Func.h  Integrand.h  Ode.h  Poisson.h  gauss.h  globals.h
scr/: Func.cpp  Integrand.cpp  Makefile.am  Makefile.in  Orbital.cpp  Orbital.h  Poisson.cpp  SKtable.cpp  SKtable.h  configure  configure.ac  gauss.cpp  hartree.cpp  hartree.h  main2.cpp  makefile  scf.cpp  scf.h  xc_potential.cpp  xc_potential.h
